--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,7 @@
 
     <h5 class="card-title"> Prefixes Announced: </h5>
     <p><a href="https://bgp.he.net/net/2a0c:9a40:8280::/48"> 2a0c:9a40:8280::/48</a> (RIPE) </p>
+    <p><a href="https://bgp.he.net/net/2602:fed2:7119::/48"> 2602:fed2:7119::/48</a> (ARIN) </p>
 
     <h5 class="card-title"> Upstream Providers: </h5>
     <ul class="list-group pad-bottom">
