--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,53 +1,52 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
 
-    <head>
+  <head>
 
-        {% block head %}
+    {% block head %}
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content= "AS207414 is a educational and research network operated by Ganawa Juanah. For peering information please see our peering policy." />
-        <meta name="robots" content= "index, follow">
-        <meta name="author" content="Ganawa Juanah">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content= "AS207414 is a educational and research network operated by Ganawa Juanah. For peering information please see our peering policy." />
+    <meta name="robots" content= "index, follow">
+    <meta name="author" content="Ganawa Juanah">
 
-        <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
 
-        <!-- Bootstrap core CSS -->
-        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
+    <!-- Favicon Icons -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
 
-        <!-- Bootstrap core CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.5/css/flag-icon.min.css">
+    <!-- Flag Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.5/css/flag-icon.min.css">
 
-        <!-- Custom styles for this template -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/custom/sticky-footer.css') }}"/>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/custom/grid.css') }}"/>
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-        <!-- jQuery library -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <style>
+      .container {
+        width: auto;
+        max-width: 680px;
+        padding: 0 15px;
+      }
+    </style>
+    
+    {% endblock head %}
 
-        <!-- Popper JS -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  </head>
+  
+  <body class="d-flex flex-column h-100 col-lg-8 mx-auto">
+    
+    <!-- Include Top Nav Header -->
+    {% include 'includes/header.html' %}
 
-        <!-- Latest compiled JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
-        {% endblock head %}
-
-    </head>
-
-    <body>
-
-        <!-- Include Top Nav Header -->
-        {% include 'includes/header.html' %}
-
-        <!-- Begin page content -->
-        <main role="main" class="container">{% block content %}{% endblock %}</main>
-
-    </body>
+    <!-- Begin page content -->
+    <main class="flex-shrink-0 pb-5">{% block content %}{% endblock %}</main>
 
     <!-- Include Top Nav Header -->
     {% include 'includes/footer.html' %}
-
+    
+    
+  </body>
+  
 </html>
