--- a/web/templates/base.layout.html
+++ b/web/templates/base.layout.html
@@ -5,16 +5,18 @@
 
   <head>
 
+    {{ block "head" . }}
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content= "AS207414 is a educational and research network operated by Ganawa Juanah. For peering information please see our peering policy." />
     <meta name="robots" content= "index, follow">
     <meta name="author" content="Ganawa Juanah">
 
-    <title>{{ template "title" }}</title>
+    <title>{{ template "title" . }}</title>
 
     <!-- Favicon Icons -->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
+    <link rel="shortcut icon" href="/static/favicon/favicon.ico">
 
     <!-- Flag Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.5/css/flag-icon.min.css">
@@ -31,18 +33,20 @@
       }
     </style>
 
+    {{ end }}
+
   </head>
 
   <body class="d-flex flex-column h-100 col-lg-8 mx-auto">
 
     <!-- Include Top Nav Header -->
-    <!-- {{ template "header"}} -->
+    {{ template "header" . }}
 
     <!-- Begin page content -->
-    <main class="flex-shrink-0 pb-5">{{ template "content" }}</main>
+    <main class="flex-shrink-0 pb-5">{{ template "main" . }}</main>
 
     <!-- Include Top Nav Header -->
-    <!-- {{ template "footer" }} -->
+    {{ template "footer" . }}
 
 
   </body>
