--- a/web/templates/peering.page.html
+++ b/web/templates/peering.page.html
@@ -1,6 +1,8 @@
-{{ define "title"}} AS207414.net {{end}}
-{{ define "content" }}
+{{ template "base" .}}
 
+{{ define "title" }} AS207414 {{ end }}
+
+{{ define "main" }}
 
 <div class="container d-flex flex-column gap-5">
 
